style: touch it up touch it up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -206,6 +206,10 @@ nav a {
   color: var(--foreground);
 }
 
+[data-theme='dark'] input {
+  color: var(--background);
+}
+
 /* alerts */
 .alert {
   border-radius: 0.25rem;
